# interlace

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  interlace-name.md  pyproject.toml
.beads/: metadata.json
.githooks/: pre-push
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: Makefile
docs/source/: _toc.yml  case-study-politeness.ipynb  changelog.md  comparison.md  concepts.md  conf.py  contributing.md  cross-validation.md  diagnostics.ipynb  examples.ipynb  examples.md  faq.md  index.md  installation.md  interpreting-results.ipynb  interpreting-results.md  model-comparison.md  performance.md  quickstart.md  random-slopes.md  why-python.md  why-r.md
docs/source/_static/: custom.css
docs/source/_templates/: github-link.html  page.html
docs/source/api/: augment.md  fit.md  influence.md  leverage.md  plotting.md  predict.md  residuals.md  result.md
src/interlace/: __init__.py  _frame.py  allfit.py  anova.py  augment.py  convergence.py  cross_val.py  formula.py  influence.py  leverage.py  plotting.py  predict.py  profile_ci.py  profiled_reml.py  quantreg.py  residuals.py  result.py  satterthwaite.py  simulate.py  sparse_z.py  summary.py
tests/: test_acceptance_n_influential_tau_gap.py  test_allfit.py  test_augment.py  test_bootstrap_se.py  test_cholmod.py  test_convergence_warnings.py  test_cross_val.py  test_dual_model_support.py  test_fit_random_slopes.py  test_formula.py  test_formula_polars.py  test_frame.py  test_influence.py  test_integration_random_slopes.py  test_is_singular.py  test_leverage.py  test_ml_anova.py  test_n_influential_tau_gap.py  test_narwhals_parity.py  test_nested.py  test_ols_dfbetas_qr.py  test_parity_lme4_vignette.py  test_parity_single_re.py  test_parity_slopes_corr.py  test_parity_slopes_crossed.py  test_parity_slopes_diag.py  test_parity_slopes_indep.py  test_parity_three_re.py  test_parity_two_re.py  test_phase3_polars_e2e.py  test_plotting.py  test_polars_only.py  test_predict.py  test_predict_unseen_groups.py  test_profile_ci.py  test_profile_loglik.py  test_profiled_reml.py  test_quantreg_ker_se.py  test_random_effects_se.py  test_residuals.py  (+7 more)
tests/fixtures/: gen_lme4_vignette.R  gen_ml.R  gen_nested.R  gen_slopes_corr.R  gen_slopes_crossed.R  gen_slopes_indep.R  gen_three_re.R  gen_two_re.R  lme4_dyestuff_results.json  lme4_pastes_results.json  lme4_sleepstudy_results.json  nested_pastes_data.csv  nested_pastes_r_results.json  nested_synthetic_data.csv  nested_synthetic_r_results.json  slopes_corr_data.csv  slopes_corr_r_results.json  slopes_crossed_data.csv  slopes_crossed_r_results.json  slopes_indep_data.csv  slopes_indep_r_results.json  three_re_data.csv  three_re_r_results.json  two_re_data.csv  two_re_r_results.json
