[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interlace"
version = "0.1.0"
description = "Joint REML estimation for linear mixed models with crossed random intercepts using sparse design matrices"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "statsmodels>=0.14",
    "formulaic>=0.6",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.0",
    "tqdm>=4.67.3",
    "plotnine>=0.15.3",
]

[project.urls]
Homepage = "https://github.com/paishe01/interlace"
Issues = "https://github.com/paishe01/interlace/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "pandas-stubs>=3.0.0.260204",
]

[tool.hatch.build.targets.wheel]
packages = ["src/interlace"]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["patsy", "patsy.*", "statsmodels", "statsmodels.*", "scipy", "scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
