[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "interlace-lme"
dynamic = ["version"]
description = "Joint REML estimation for linear mixed models with crossed random intercepts using sparse design matrices"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "statsmodels>=0.14",
    "formulaic>=0.6",
    "numpy>=1.26",
    "scipy>=1.12",
    "narwhals>=1.0",
    "tqdm>=4.67.3",
    "plotnine>=0.15.3",
]

[project.urls]
Homepage = "https://github.com/heliopais/interlace"
Documentation = "https://heliopais.github.io/interlace/"
Issues = "https://github.com/heliopais/interlace/issues"

[project.optional-dependencies]
bobyqa = ["Py-BOBYQA>=1.4"]
cholmod = ["scikit-sparse>=0.4"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "mypy==1.19.1",
    "pandas>=2.0",
    "pandas-stubs>=3.0.0.260204",
    "types-tqdm>=4.67.0",
    "polars>=1.0",
    "narwhals>=1.0",
    "pytest-cov>=7.1.0",
]
docs = [
    "sphinx>=8.0",
    "furo>=2024.8.6",
    "sphinx-copybutton>=0.5",
    "sphinx-external-toc>=1.0",
    "sphinx-autodoc-typehints>=2.0",
    "myst-nb>=1.1",
    "ipykernel>=6.0",
]

[tool.hatch.version]
source = "vcs"
raw-options = {version_scheme = "no-guess-dev", local_scheme = "no-local-version"}

[tool.hatch.build.hooks.vcs]
version-file = "src/interlace/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/interlace"]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["statsmodels", "statsmodels.*", "scipy", "scipy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["plotnine", "plotnine.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["interlace.plotting"]
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = ["tqdm", "tqdm.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pybobyqa"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["patsy", "patsy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["formulaic", "formulaic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
